@@ -1,4 +1,9 @@
 0.7.4
+- [bug] Fixed bug whereby an exception in Python 3
+  against a module compiled to the filesystem would
+  fail trying to produce a RichTraceback due to the
+  content being in bytes. [ticket:209]
+
 - [bug] Change default for compile()->reserved_names
   from tuple to frozenset, as this is expected to be
   a set by default.  [ticket:208]
